# any2repo-gateway

./: .env.example  .gitignore  Dockerfile  README.md  any2repo_gateway_paper.html  any2repo_gateway_paper.tex  any2repo_gateway_paper.txt  pyproject.toml
app/: __init__.py  config.py  engine_manifest.py  engine_registry.py  iam.py  main.py  store.py
app/backends/: aws_bedrock.py  azure_ml.py  base.py  gcp_vertex.py  on_prem.py
app/middleware/: auth.py
app/models/: schemas.py
app/routers/: engines.py  jobs.py  tenants.py  webhooks.py
docs/: architecture.md  engine_protocol.md  index.html
examples/: custom-engine-manifest.json  quant2repo-manifest.json  research2repo-manifest.json
tests/: conformance.py  test_api.py  test_integration.py  test_webhooks.py
