[project]
name = "any2repo-gateway"
version = "2.0.0"
description = "Control-plane gateway for Research2Repo, Quant2Repo, and pluggable execution engines"
requires-python = ">=3.11"
authors = [{name = "Vijayakumar Ramdoss", email = "nellaivijay@gmail.com"}]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    # GCP
    "google-cloud-aiplatform>=1.60.0",
    "google-auth>=2.30.0",
    # AWS
    "boto3>=1.34.0",
    # Azure
    "azure-ai-ml>=1.16.0",
    "azure-identity>=1.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
